test/files/neg/t9138.check
t9138.scala:9: error: class D needs to be abstract.
Missing implementation for member of class C:
  def f(t: B)(s: String): B = ??? // String does not match Int

class D extends C[B] {
      ^
t9138.scala:19: error: object creation impossible.
Missing implementation for member of trait Base:
  def foo(a: String)(b: Int): Nothing = ???

object Derived extends Base[String] {
       ^
t9138.scala:29: error: class DDD needs to be abstract.
Missing implementation for member of class CCC:
  def f(t: B, s: String): B = ??? // T does not match Int

class DDD extends CCC[B] {
      ^
t9138.scala:43: error: object creation impossible.
Missing implementation for member of trait Model:
  def create(conditionalParams: ImplementingParamTrait)(implicit d: Double): Int = ??? // overriding member must declare implicit parameter list

object Obj extends Model[ImplementingParamTrait] {
       ^
4 errors
